--- a/cv.css
+++ b/cv.css
@@ -32,7 +32,7 @@ width: 965px;
 margin: 0 auto;
 }
 #content {
-background-color: #eee;
+background-color: #FFFFFF;
 width: 960px;
 text-align: left;
 overflow: auto;
